# halu

./: .gitignore  config.yaml  main.py  pyproject.toml  pytest.ini
analysis/: report.py  selective_eval.py
core/: runner.py  types.py  utils.py
data/: __init__.py  open_llm.py  table_builder.py
engine/: detector.py
features/: build.py
features/metrics/: fcm.py
src/halu/: __init__.py  cli.py  config.py  orchestrate.py  pipeline.py
src/halu/analysis/: __init__.py  eval_metrics.py  report.py
src/halu/core/: determinism.py  prompts.py  utils.py
src/halu/data/: __init__.py  base.py  open_llm.py  registry.py  truthfulqa.py
src/halu/engine/: __init__.py  detector.py
src/halu/features/: audit.py  build.py  feature_metrics.py  tables.py
src/halu/features/metrics/: __init__.py  fcm.py  icr_probe.py  llmcheck.py
src/halu/model/: ensemble.py
src/halu/passes/: extract.py
src/halu/utils/: math.py
tests/: conftest.py  mytest.py  test_core_prompts_edge_cases_unit.py  test_core_prompts_unit.py  test_core_runner_types_unit.py  test_data_truthfulqa_integration.py  test_detector_ensemble_unit.py  test_engine_detector.py  test_eval_metrics_unit.py  test_feature_build_unit.py  test_feature_metrics_unit.py  test_feature_population.py  test_feature_tables_unit.py  test_no_leakage.py  test_orchestrate.py  test_pipeline_qwen25_integration.py  test_report_outputs.py  test_utils_math_unit.py
